Trying to fix navbar spacing problem

--- a/app/assets/stylesheets/page.css.scss
+++ b/app/assets/stylesheets/page.css.scss
@@ -62,7 +62,7 @@ table {
 			margin: 0;
 			padding: 0;
 			width: 10em;
-			display: inline;
+			display: inline-block;
 			background-color: $navbarColor;
 			border: 0.2em outset $navbarBorderColor;
 			border-radius: 0.8em;
